@@ -1,3 +1,7 @@
+2011-05-25  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/cpp0x/initlist51.C: New.
+
 2011-05-25  Janis Johnson  <janisjo@codesourcery.com>
 
 	* gcc.target/arm/fp16-compile-none-1.c: Update expected error.
